--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
 					<h1>Metropolita</h1>
-					<p>A full responsive, business-oriented HTML5/CSS3 template<br />
-					built by <a href="https://templated.co/">Templated</a> and released under the <a href="https://templated.co/license">Creative Commons</a>.</p>
+					<p>Acompañanos en este viaje por los ricones de <br />
+					<a href="https://templated.co/">metrópolis</a> que seguro que no conocías.</p>
 					<a href="#one" class="button special scrolly">Sí, quiero.</a>
 				</div>
 			</section>
